지영이 핸들바스~ main.html/main-celebrity-list.html 참조

--- a/beautyChuSpring/src/main/webapp/view/yun-womanstylethumbnail.html
+++ b/beautyChuSpring/src/main/webapp/view/yun-womanstylethumbnail.html
@@ -14,13 +14,15 @@
 <!-- 스타일 -->
 <link rel="stylesheet" href="../css/jy/jy_DG_Slider.css" type="text/css"
 	media="all" />
-	
-<!-- 썸네일 이미지 -->	
 
-	<link rel="stylesheet" type="text/css" href="../css/resources/kh-thumnail.css" />
-	<link rel="stylesheet" type="text/css" href="../css/resources/kh-shop.css" />
+<!-- 썸네일 이미지 -->
 
- <!-- 공통 스크립트 -->
+<link rel="stylesheet" type="text/css"
+	href="../css/resources/kh-thumnail.css" />
+<link rel="stylesheet" type="text/css"
+	href="../css/resources/kh-shop.css" />
+
+<!-- 공통 스크립트 -->
 <!-- <script type="text/javascript" src="../js/modernizr.min.js"></script> -->
 <script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
 <!-- <script type="text/javascript" src="../js/jquery.easing.js"></script> -->
@@ -30,10 +32,10 @@
 <!-- <script type="text/javascript" src="../js/jquery.motio.min.js"></script>  -->
 
 
-	<script>
+<script>
 			window.intro = 'yes';
 	</script>
-		
+
 <!-- 	page가 home일 경우에만 로드하는 js -->
 <!--  	<script type="text/javascript" src="../js/jquery.touchSwipe.min.js"></script> -->
 <!-- 	<script type="text/javascript" src="../js/jquery.event.drag-2.2.js"></script> -->
@@ -42,35 +44,29 @@
 <!-- 	<script type="text/javascript" src="../js/home.show-window.js"></script> -->
 <!-- 공통 스크립트 -->
 
-<script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>  
+<script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
 
 <script type="text/javascript" src='../js/handlebars-v2.0.0.js'></script>
 
 
 
 <!--     <script type="text/javascript" src="../js/resources/jquery-1.9.1.min.js"></script> -->
-    <script type="text/javascript" src="../js/resources/kh/jssor.js"></script> 
-    <script type="text/javascript" src="../js/resources/kh/jssor.slider.js"></script> 
+<script type="text/javascript" src="../js/resources/kh/jssor.js"></script>
+<script type="text/javascript" src="../js/resources/kh/jssor.slider.js"></script>
 
 
 <!-- 썸네일이미지 -->
-	<script type="text/javascript" src="../js/shop.js"></script>
+<script type="text/javascript" src="../js/shop.js"></script>
 
 <style type="text/css">
-
-
-
-
 
 /* 스타일 적용 공간! */
 
 /* ============================================================== */
 
-
-
 /*  댓글 스타일 */
-.comment{
-height: 50px;
+.comment {
+	height: 50px;
 }
 
 /* ========================== */
@@ -78,13 +74,12 @@ height: 50px;
 	width: 1200px;
 	height: 100%;
 	margin: 0 auto;
-	margin-top: 100px; 
+	margin-top: 100px;
 }
 
 html {
 	height: 100%;
 }
-
 
 header {
 	height: 100px;
@@ -129,7 +124,7 @@ body {
 	position: relative;
 	width: 280px;
 	height: 410px;
- 	float: left; 
+	float: left;
 	margin: 5px;
 	font-size: 40px;
 	border-radius: 10px;
@@ -137,9 +132,11 @@ body {
 }
 
 .yun-edge {
+	
 }
 
 .yun-selected {
+	
 }
 
 .yun-boximage {
@@ -153,11 +150,12 @@ body {
 	width: 280px;
 	text-align: center;
 	height: 100px;
-	background-color: rgba(0,0,0,1);
+	background-color: rgba(0, 0, 0, 1);
 	color: white;
 	border-radius: 0px 0px 10px 10px;
 	font-size: 30px;
 }
+
 .kh-basic h2 {
 	color: white;
 	margin-top: 15px;
@@ -180,9 +178,8 @@ body {
 }
 
 .kh-basic .starrr {
-   	margin-top: 10px;
+	margin-top: 10px;
 }
-
 
 .kh-detail {
 	position: absolute;
@@ -190,7 +187,7 @@ body {
 	width: 280px;
 	text-align: center;
 	height: 140px;
-	background-color: rgba(0,0,0,1);
+	background-color: rgba(0, 0, 0, 1);
 	color: white;
 	border-radius: 0px 0px 10px 10px;
 	display: none;
@@ -201,7 +198,7 @@ body {
 	top: 0px;
 	width: 280px;
 	height: 270px;
-	background-color: rgba(0,0,0,0.5);
+	background-color: rgba(0, 0, 0, 0.5);
 	display: none;
 	border-radius: 10px 10px 0px 0px;
 }
@@ -209,7 +206,6 @@ body {
 .yun-shop-button .yun-shoppricelist {
 	float: left;
 }
-
 
 /* ============================================================== */
 /* yun-test.html css */
@@ -262,7 +258,6 @@ body {
 	float: left;
 	margin: 4px;
 	text-align: center;
-	
 }
 
 .kh-priceicon img {
@@ -289,7 +284,7 @@ body {
 	bottom: 0px;
 	text-align: center;
 	width: 155px;
-	background-color: rgba(0,0,0,0.5);
+	background-color: rgba(0, 0, 0, 0.5);
 	border-radius: 0 0 5px 5px;
 	color: white;
 }
@@ -300,14 +295,13 @@ body {
 	text-align: center;
 	width: 155px;
 	height: 178px;
-	background-color: rgba(0,0,0,0.5);
+	background-color: rgba(0, 0, 0, 0.5);
 	border-radius: 5px;
 	color: white;
 }
 
 .kh-smalldetailinfo {
 	margin-top: 75px;
-	
 }
 
 #yun-buttondiv {
@@ -327,6 +321,7 @@ body {
 }
 
 .yun-shoppricelist {
+	
 }
 /* ============================================================== */
 /* yun-styledetail.html css */
@@ -376,7 +371,6 @@ body {
 .yun-stylecomment {
 	width: 100%;
 	margin-top: 52px;
-	
 }
 
 /* ============================================================== */
@@ -418,6 +412,7 @@ body {
 	height: 50px;
 	font-size: 30px;
 }
+
 .yun-pricetitle {
 	float: left;
 	font-size: 30px;
@@ -436,31 +431,23 @@ body {
 .row {
 	height: 100%;
 	boredr: 1px green solid;
-	
 }
-
 
 /* ============================================================== */
 /* ==============================버튼 스타일================================ */
-
 .buttondiv {
 	text-align: center;
 }
 
 .ui.basic.button, .ui.basic.buttons .button {
-
-border-radius: 20px;
+	border-radius: 20px;
 }
-
-
 </style>
 
 </head>
 <body class="home">
 
-	<jy_header>
-		<!-- header 건들지 말긔! -->
-	</jy_header>
+	<jy_header> <!-- header 건들지 말긔! --> </jy_header>
 
 
 	<!--	<div id=changediv >
@@ -471,9 +458,9 @@ border-radius: 20px;
 
 
 	<div id="wrap-chu" class="wrap-chu">
-<div class="yun-container"></div>
+		<div class="yun-container"></div>
 
-<!--  			<div class="yun-box">
+		<!--  			<div class="yun-box">
 				<img class="yun-boximage" src="../images/main/woman (1).png">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
@@ -493,7 +480,7 @@ border-radius: 20px;
 		<!-- footer 건들지 말긔! -->
 	</footer>
 
-<!-- 	<script type="text/javascript"
+	<!-- 	<script type="text/javascript"
 		src='../js/resources/jquery-2.1.1.min.js'></script>
 	<script src="../js/resources/starrr.js"></script> -->
 
@@ -775,7 +762,6 @@ border-radius: 20px;
 		
 				
 				$.getJSON('../json/style/list.do', 
-					    function(data){
 						
 
 					      $.get('templates/style-table.html', function(source){
@@ -786,10 +772,11 @@ border-radius: 20px;
 					    });
 			    
 	</script>
-	
-    <script type="text/javascript" src="../js/resources/jquery-1.9.1.min.js"></script>
-    <script type="text/javascript" src="../js/resources/kh/jssor.js"></script>
-    <script type="text/javascript" src="../js/resources/kh/jssor.slider.js"></script> 
+
+	<script type="text/javascript"
+		src="../js/resources/jquery-1.9.1.min.js"></script>
+	<script type="text/javascript" src="../js/resources/kh/jssor.js"></script>
+	<script type="text/javascript" src="../js/resources/kh/jssor.slider.js"></script>
 
 </body>
 </html>
