--- a/beautyChuSpring/src/main/webapp/view/templates/jy_commenttemp.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/jy_commenttemp.html
@@ -34,13 +34,13 @@
 			<div class="comment">
 				<div class="jy-text-comment">
 					<div class="jy-wr-comment">
-						<textarea class="write-comment" title="댓글을 입력하세요"
+						<textarea id="kh-content" class="write-comment" title="댓글을 입력하세요"
 							placeholder="댓글을 입력하세요"></textarea>
 
 						<div class="jy-submit-comment">
 							<div class="jy-comment-icon">
 								<!-- <i class="jy-comment-submit-icon">입력</i>-->
-								<button class="jy-comment-submit-icon">입력</button>
+								<button id="kh-reviewAdd" class="jy-comment-submit-icon" data-no="{{styleDetail.styleNumber}}">입력</button>
 							</div>
 						</div>
 
@@ -50,11 +50,9 @@
 		</div>
 		
 		<div class="jy-comment-wrap">
-			<ul class="jy-comment-list">
+			<ul class="jy-comment-list2">
+			
 				<li class="jy-row-comment">
-
-
-
 					{{#each review}}
 					<div class="comment">
 						<div class="left">
@@ -63,11 +61,18 @@
 						</div>
 						<div class="right">
 							<div class="album">
-							<span class="icon buyer">실이용자</span>
+								<span class="icon buyer">실이용자</span>
 								<strong>{{name}}</strong>
+								<button id="kh-btnDelete-{{reviewNo}}" class="{{reviewbtn}} reviewDelete-btn" data-reviewNo="{{reviewNo}}">삭제</button>
+								<button id="kh-btnUpdate-{{reviewNo}}" class="{{reviewbtn}} reviewUpdate-btn" data-reviewNo="{{reviewNo}}">수정</button>
+								<button id="kh-btnUpdateCancel-{{reviewNo}}" class="{{reviewbtn}} reviewUpdateCancel-btn" data-reviewNo="{{reviewNo}}" style="display:none;">수정취소</button>
 							</div>
 							<div class="band">
-								<div class="band-comment">{{content}}</div>
+								<div class="band-comment">
+									<pre id="kh-reviewContent-{{reviewNo}}">{{content}}</pre>
+									<textarea id="kh-reUpdateForm-{{reviewNo}}" class='reviewUpdateForm' rows="2" cols="15" style="display:none;">{{content}}</textarea>	
+									<button id="kh-updateAdd-{{reviewNo}}" class="jy-comment-submit-icon review-btn" data-reviewNo="{{reviewNo}}" style="display:none;">입력</button>
+								</div>
 								<div class="band-comment"> {{date}}</div>
 							</div>
 						</div>
@@ -84,20 +89,22 @@
 
 
 
-	<script src="http://code.jquery.com/jquery-latest.js"
+<!-- 	<script src="http://code.jquery.com/jquery-latest.js"
 		type="text/javascript"></script>
 	<script src="../js/resources/jy/jquery.DG_Slider.min.js"
 		type="text/javascript"></script>
 	<script type="text/javascript">
 		(function($) {
 			$(function() {
+				
 				$('.jy-comment-list').DG_Slider({
 					auto : false,
 					pager : true
 				});
+				
 			});
 		}(jQuery))
-	</script>
+	</script> -->
 
 	<!-- header, footer 로드 스크립트!! -->
 <!-- 	<script>
