--- a/beautyChuSpring/src/main/webapp/view/templates/kh-imgthumnail.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/kh-imgthumnail.html
@@ -1,5 +1,5 @@
 
- 	<script type="text/javascript" src="../js/resources/kh/shop.js"></script>
+ 	<script type="text/javascript" src="../js/shop.js"></script>
 
 	<div class="quick_view">
 		<div class="desc_area">
@@ -11,7 +11,7 @@
 					</div>
 					<div class="big_thum" id="proBigImg">
 					{{#each photos}}
-						<img src="{{url}}" alt="잇츠스킨 제주<BR />마유 크림" />
+						<img src="{{url}}" alt="이미지 주소를 다시 확인해주세요" />
 					{{/each}}	
 					</div>
 				</div>
