--- a/beautyChuSpring/src/main/webapp/view/templates/style-table.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/style-table.html
@@ -1,6 +1,6 @@
 
 					{{#each styleList}}
- 			<div class="yun-box" data-no="{{stylenumber}}">
+ 			<div class="yun-box" data-no="{{styleNumber}}">
  				<img class="yun-boximage" src={{url}}>
  					<div class="kh-basic">
 						<h2>{{styleName}}</h2>
