--- a/beautyChuSpring/src/main/webapp/view/kh-shopinfo.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-shopinfo.html
@@ -37,6 +37,7 @@
 
 <script type='text/javascript' src='http://code.jquery.com/jquery-1.7.2.js'></script>
 <script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src='../js/handlebars-v2.0.0.js'></script>
 
 <style type="text/css">
 
@@ -308,6 +309,7 @@ body {
 #yun-styledetailcontainer {
 	width: 1150px;
 	height: 600px;
+	background-color: white;
 }
 
 .yun-stylecontainerdiv {
@@ -355,6 +357,7 @@ body {
 #yun-shopdetailcontainer {
 	width: 1150px;
 	height: 600px;
+	background-color: white;
 }
 
 .yun-shopcontainerdiv {
@@ -429,7 +432,10 @@ body {
 	<div id="wrap-chu" class="wrap-chu">
 
 		<div class="yun-container">
-			<div class="yun-box">
+		
+		<!-- 샵 테이블 삽입부 -->
+		
+<!-- 			<div class="yun-box">
 				<img class="yun-boximage" src="../images/shop/shop1.jpg">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
@@ -440,178 +446,10 @@ body {
 						<div class="starrr"></div>
 					</div>
 					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/shop/shop3.jpg">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/shop/shop2.jpg">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/shop/shop4.jpg">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-gradation"></div>
-			</div> 
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/shop/shop5.jpg">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
- 			<div class="yun-box">
-				<img class="yun-boximage" src="../images/shop/shop6.jpg">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/shop/shop7.jpg">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/shop/shop8.jpg">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-
-
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/shop/shop9.jpg">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/shop/shop10.jpg">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/shop/shop11.jpg">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/shop/shop12.jpg">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/shop/shop1.jpg">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/shop/shop2.jpg">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/shop/shop3.jpg">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
+			</div> -->
+			
+			
+			
 
 		</div>
 	</div>
@@ -633,12 +471,12 @@ body {
 
 		
 		<!-- 썸네일 로드 스크립트!! -->		
-		var container = $('.yun-container');
+/* 		var container = $('.yun-container');
 		var elements = container.children();
 		var oldWrapPos = -1;
 		var pagebtnnum ;
 		
-		$('.yun-box').click(function() {
+		 $('div').on("click",".yun-box",function(event){
 			container.children().removeClass('yun-selected'); // 기존에 selected 된 클레스를 리셋
 			$(this).addClass('yun-selected'); //누른 div에 selected 표시
 			var selectedPos = $(this).index(); // 누른 div의 index값 저장
@@ -673,9 +511,55 @@ body {
 				setTimeout(function () {  $('html, body').animate({scrollTop:$('.yun-info-bg').position().top-75}, 'slow');  });
 				pagebtnnum=2;
 			}
-		});
+		}); */
 		
+			var oldWrapPos = -1;
+			var pagebtnnum ;
 		
+		 $('div').on("click",".yun-box",function(event){
+			event.stopPropagation();
+			var container = $('.yun-container');
+			var elements = container.children();
+			
+			container.children().removeClass('yun-selected'); // 기존에 selected 된 클레스를 리셋
+			$(this).addClass('yun-selected'); //누른 div에 selected 표시
+			var selectedPos = $(".yun-box").index(this); // 누른 div의 index값 저장
+			console.log("selectedPos:" + selectedPos);
+			var elementsInRow = 4; // 너비 4칸으로 고정
+		 	var row = Math.floor(selectedPos / elementsInRow) + 1;
+		 	console.log("row:" + row);
+			//floor는 버리는 함수 누른인덱스/너비 4칸 +1해서 몇번째 줄인지 구함
+			var wrapPos = (row * elementsInRow);
+			console.log("wrapPos:" + wrapPos);
+			// 만약 마지막 줄을 선택했다면 마지막 엘리먼트를 이용한다. 
+			var size = elements.length; //총 div의 갯수
+			if (wrapPos >= size) {
+				wrapPos = size;
+			}
+			//wrapPos 끝인덱스를 저장한다.
+			wrapPos = wrapPos - 1;
+			//인덱스는 0부터 시작하므로 -1을 해준다.
+			
+			if (selectedPos == oldWrapPos) {
+				$('.yun-info-bg').slideUp(function() {
+					$(this).remove();
+				});
+				oldWrapPos = -1;
+			} else {
+				oldWrapPos = selectedPos;
+				elements.removeClass('yun-edge');
+				$(elements[wrapPos]).addClass('yun-edge');
+				$('.yun-info-bg').slideUp(function() {
+					$(this).remove();
+				});
+				$('.yun-edge').after('<div id=changediv class="yun-info-bg"><div id=yun-div1 class=yun-div><div></div>');
+				loadShop($(this).attr('data-email'));
+				loadReview($(this).attr('data-email'));
+				$('.yun-info-bg').slideDown();
+				setTimeout(function () {  $('html, body').animate({scrollTop:$('.yun-info-bg').position().top-75}, 'slow');  });
+				pagebtnnum=2;
+			}
+		}); 
 
 		<!--썸네일 상세페이지 앞뒤이동 &오버레이 스크립트 -->		
 
@@ -789,6 +673,53 @@ body {
 			alert("쿠폰이 발급되었습니다!");
 		});
 		
+		/* 샵 리스트 로드 */
+		
+			$.getJSON('../json/shop/list.do', 
+			    function(data){
+						console.log(data);						
+					       $.get('templates/kh-shop-table.html', function(source){
+						    	  var template = Handlebars.compile(source);
+						    	  var html = template(data);
+						    	  $('.yun-container').html(html);
+						    	});   
+					    });
+		
+		/* 샵 디테일 로드  */
+ 			function loadShop(email) {
+ 					$.getJSON('../json/shop/view.do?mail='+email, function(data){
+ 							console.log(data);
+ 						      $.get('templates/yun-shopdetail.html', function(source){
+ 							    	  var template = Handlebars.compile(source);
+ 							    	  var html = template(data);
+ 										$('<div>').fadeIn('fast').appendTo("#changediv").attr({"id":"yun-div"+pagebtnnum,"class":"yun-div"})
+ 										.css({"z-index":pagebtnnum,"margin-left":"100%"}).animate({ marginLeft: "0px" }, 500);
+ 							    	  $('#yun-div'+pagebtnnum).html(html);
+ 							    	});  
+ 						      
+ 	 					     $.get('templates/kh-shopimage-gallery.html', function(source){
+ 						    	  var template = Handlebars.compile(source);
+ 						    	  var html = template(data);
+ 					    		  $('#yun-div'+pagebtnnum+' '+'#yun-shopphotolist').html(html);	  
+ 						    	 
+ 						      }); 
+ 						      
+ 						    });
+ 				 	} 
+				
+				/* 댓글 로드 */
+				
+			function loadReview(email) {
+		 		$.getJSON('../json/review/reviewList.do?shopEmail='+email, 
+		 			    function(data){
+		 			console.log(data);
+		 			      $.get('templates/jy_commenttemp.html', function(source){
+		 			    	  var template = Handlebars.compile(source);
+		 			    	  var html = template(data);
+		 			    	  $('#yun-shopcomment').html(html);
+		 			      });
+		 			    });
+		 	 	}
 	</script>
 	
 	<script>
@@ -803,35 +734,4 @@ body {
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+d
