--- a/beautyChuSpring/src/main/webapp/view/jy_qna.html
+++ b/beautyChuSpring/src/main/webapp/view/jy_qna.html
@@ -1,124 +1,99 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
 <title>Beauty Chu~♥</title>
+
+<meta charset="UTF-8">
 
 <link rel="shortcut icon" href="../images/favicon.ico"
 	type="image/x-icon">
 <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
-<link rel="stylesheet" type="text/css" href="../css/common.css">
-
-<link rel="stylesheet" type="text/css" href="../css/resources/jy_normalize.css">
 
 <script type='text/javascript'
 	src='http://code.jquery.com/jquery-1.7.2.js'></script>
-	
+<script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
+
 <style type="text/css">
-	/* 스타일 적용 공간! */
-.qna {width: 800px; padding: 30px 195px;}
-.qna-form {border: 3px solid gray; padding: 30px;}
-.qna-data {text-align: center;}
-.title-qna {text-align: center;}
-.qna-form-control {width: 600px;}
-.qna-subtitle {text-align: left; padding-left: 70px;}
-.btn-qna-submit {margin: 20px; width: 610px;}
-.qna-email {height:20px; font-size: 14px;}
-.qna-content {font-size: 14px;}
+/* 스타일 적용 공간! */
+.qna { width: 800px; margin: auto;}
+.qna-form { border: 3px solid gray; border-radius:10px; padding: 40px; margin-top:100px;}
+.qna-data { text-align: center;}
+.title-qna { text-align: center; font-size: 40px; margin-bottom: 40px;}
+.qna-form-control { width: 600px;}
+.qna-subtitle { font-weight:bold; text-align: left; padding-left: 70px; margin: 10px 0px;}
+.btn-qna-submit { margin: 20px; width: 610px;}
+.qna-email { height: 20px; font-size: 12px; margin-bottom: 30px;}
+.qna-content { font-size: 12px;}
+
+hr { display: block; }
 
 /* bring at "jy_demo.css" */
-a, button {
-	color: #74716D;
-	text-decoration: none;
-	outline: none;
+a, button { color: #74716D; text-decoration: none; outline: none;}
+button { 
+	padding: 1em 2em; outline: none; font-weight: 600;
+	border: none; color: #fff; background: black;
 }
-
-button {
-	padding: 1em 2em;
-	outline: none;
-	font-weight: 600;
-	border: none;
-	color: #fff;
-	background : black;
-}
-
-.button-wrap {
-	padding: 2.5em 0 0;
-	font-size: 1.25em;
-}
-
-button.trigger {
-	background : black;
-	color: #fff;
-	border: none;
-}
-
+.button-wrap { padding: 2.5em 0 0; font-size: 1.25em;}
+button.trigger { background: black; color: #fff; border: none;}
 </style>
 
 </head>
-<body>
+<body class="home">
+	<jy_header> <!-- header 건들지 말긔! --> </jy_header>
 
-	<header>
-		<!-- header 건들지 말긔! -->
-	</header>
-	
-		
 
 
 	<div id="wrap-chu" class="wrap-chu">
-	
+
 		<!-- 작업공간 - 이파일 고치지 말고 복사해서 쓰시오...!! -->
-	<nav id='loginnav'>
-			<ul>
-				<li><a href='#' class='show-login' id='show-login'>로그인</a></li>
-				<li><a href='#' class='show-signup' id='show-signup'>회원가입</a></li>
-				<li><a href='#'>문의하기</a></li>
-			</ul>
-		</nav>
 		
+		<!-- 문의하기 전체 폼 가운데 정렬하기 -->
+
 		<section class='qna' id='qna'>
-	<div class='qna-form'>
-		<div class='title-qna'>
-			<h2>문 의 하 기</h2>
-		</div>
-	<hr>
-		<div class='qna-data'>
-		<div class='qna-email-form' id='qna-email-form'>
-			<h4 class="qna-subtitle">이메일 주소</h4>
-			<input name='qna-email' class='qna-email qna-form-control' id='qna-email' type='email'
-				placeholder="beautychu@appchu.com" required>
-		</div>
-		<div class='qna-content-form' id='qna-content-form'>
-			<h4 class="qna-subtitle">문의 내용</h4>
-			<textarea name='qna-content' class='qna-content qna-form-control' id='qna-content'
-				placeholder="문의하실 내용을 작성해주세요." required style='height:200px;'></textarea>
-		</div>
-		
-		<div class='qna-submit' id='qna-submit'>
-			<button class="btn-qna-submit">문 의 하 기</button>
-		</div>
-		</div>
-		<hr>
-		</div>
-	</section>
+			<div class='qna-form'>
+				<div class='title-qna'>
+					<label>문 의 하 기</label>
+				</div>
+				
+				<hr><!-- 선보이게 할 것.  -->
+				
+				<div class='qna-data'>
+					<div class='qna-email-form' id='qna-email-form'>
+						<h4 class="qna-subtitle">이메일 주소</h4>
+						<input name='qna-email' class='qna-email qna-form-control'
+							id='qna-email' type='email' placeholder="beautychu@appchu.com"
+							required>
+					</div>
+					<div class='qna-content-form' id='qna-content-form'>
+						<h4 class="qna-subtitle">문의 내용</h4>
+						<textarea name='qna-content' class='qna-content qna-form-control'
+							id='qna-content' placeholder="문의하실 내용을 작성해주세요." required
+							style='height: 200px;'></textarea>
+					</div>
+
+					<div class='qna-submit' id='qna-submit'>
+						<button class="btn-qna-submit">문 의 하 기</button>
+					</div>
+				</div>
+				<hr>
+			</div>
+		</section>
 	</div>
 
 
 
 
-	
 	<footer>
 		<!-- footer 건들지 말긔! -->
 	</footer>
 
 
 
-
 	<!-- header, footer 로드 스크립트!! -->
 	<script>
-		$('header').load('common/header.html');
-		$('footer').load('common/footer.html');
-		
+		$('jy_header').load('common/jy_header.html');
+		/*$('footer').load('common/footer.html'); */
+
 		/* 
 		window.setTimeout('window.location.reload()', 7000); //60초마다 새로고침
 		 */
