--- a/beautyChuSpring/src/main/webapp/view/common/header.html
+++ b/beautyChuSpring/src/main/webapp/view/common/header.html
@@ -7,7 +7,8 @@
 
 <!-- login form css -->
 <link rel="stylesheet" type="text/css" href="../css/jy/jy_dialog.css" />
-<link rel="stylesheet" type="text/css" href="../css/jy/jy_dialog-ken.css" />
+<link rel="stylesheet" type="text/css"
+	href="../css/jy/jy_dialog-ken.css" />
 <script src="../js/resources/jy/modernizr.custom.js"></script>
 
 <!-- Dialog JS -->
